samples/_failures_safe/1761599585_ab6435_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d9e9f5e.c: In function ‘main’:
./samples/SAFE/__tmp_8d9e9f5e.c:127:12: error: missing terminating " character
  127 |     printf("\nMatrix
      |            ^~~~~~~~~
./samples/SAFE/__tmp_8d9e9f5e.c:127:5: error: expected expression at end of input
  127 |     printf("\nMatrix
      |     ^~~~~~
./samples/SAFE/__tmp_8d9e9f5e.c:127:5: error: expected declaration or statement at end of input
